objects/Apttus_Config2__PriceMatrixEntry__c.object
<CustomObject>
    <description>Represents a single entry in a price matrix</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Price_Matrix_Ext_ID__c</fullName>
        <label>APTS Price Matrix Ext ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmountSourceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The source holding the adjustment amount. If the adjustment source does not hold a value, the value would default to the adjustment amount.</description>
        <inlineHelpText>The source holding the adjustment amount. If the adjustment source does not hold a value, the value would default to the adjustment amount.</inlineHelpText>
        <label>Adjustment Amount Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__FormulaField__c.Apttus_Config2__BusinessObject__c</field>
                <operation>equals</operation>
                <value>Apttus_Config2__LineItem__c</value>
            </filterItems>
            <infoMessage>Please select a field that holds the adjustment amount</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__FormulaField__c</referenceTo>
        <relationshipLabel>Price Matrix Entries</relationshipLabel>
        <relationshipName>PriceMatrixEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>List Price Override</fullName>
                </value>
                <value>
                    <fullName>Tier Price</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BandSize__c</fullName>
        <description>The band size for a weighted range</description>
        <label>Band Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Condition__c</fullName>
        <description>The condition specification</description>
        <label>Condition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Value__c</fullName>
        <description>The value for the first dimension</description>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Value__c</fullName>
        <description>The value for the second dimension</description>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndFactor__c</fullName>
        <description>The end factor for a weighted range.</description>
        <label>End Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EntryKey__c</fullName>
        <description>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</description>
        <externalId>true</externalId>
        <inlineHelpText>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</inlineHelpText>
        <label>Entry Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FlatPrice__c</fullName>
        <description>The flat price for the tier</description>
        <inlineHelpText>The flat price for the tier</inlineHelpText>
        <label>Flat Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the tier is included</description>
        <inlineHelpText>Indicates whether the tier is included</inlineHelpText>
        <label>Is Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
        <description>ID of the associated matrix</description>
        <label>Price Matrix</label>
        <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>MatrixEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceOverride__c</fullName>
        <description>The price override</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The matrix entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartFactor__c</fullName>
        <description>The start factor for a weighted range.</description>
        <label>Start Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierEndValue__c</fullName>
        <description>The tier end value</description>
        <inlineHelpText>The tier end value</inlineHelpText>
        <label>To</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierStartValue__c</fullName>
        <description>The tier start value</description>
        <inlineHelpText>The tier start value</inlineHelpText>
        <label>From</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UsageRate__c</fullName>
        <description>The unit price for the tier</description>
        <inlineHelpText>The unit price for the tier</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Dimension1Value__c</fullName>
        <formula>If( AND(Not( ISBLANK(Apttus_Config2__Dimension1Value__c) ), ISNUMBER(Apttus_Config2__Dimension1Value__c) ) , VALUE(Apttus_Config2__Dimension1Value__c) , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ecom Dimension1Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Price Matrix Entry</label>
    <nameField>
        <displayFormat>ME-{0000000000}</displayFormat>
        <label>Matrix Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>